<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="GUI">Look at my GUI</string>
    <string name="clickHereButton">CLICK HERE</string>
    <string name="switchText">Switch on / off</string>
    <string name="typeHere">Type here</string>
    <string name="checkBox">Check this out!</string>
    <string name="toast_message">Here is more information</string>
    <string name="snackOn">The switch is now on</string>
    <string name="snackOff">The switch is now off</string>
    <string name="undo">Undo</string>


    <string name="typeEmail">Type email here</string>
    <string name="enterPassword">Type your password:</string>
    <string name="enterEmail">Enter your email address:</string>
    <string name="login">LOGIN</string>
    <string name="profile">Your profile</string>
    <string name="yourName">Your name:</string>
    <string name="enterName">Enter your name</string>
    <string name="yourEmail">Your email:</string>
    <string name="yourPicture">Your picture:</string>
    <string name="clickAbove">Click the button above to take a picture</string>

    <string name="chatButton">Go to chat</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="title_activity_weather_forecast">WeatherForecast</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="goWeather">Go to weather forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messageHere">Message Here</string>
    <string name="idEquals">ID=</string>
    <string name="isSend">Is a Send Message</string>
    <string name="hideButton">Hide</string>
</resources>