<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_height="fill_parent">
    <!--    android:layout_weight="1"-->
    <!--    android:layout_gravity="fill"-->

    <TextView
        android:id="@+id/myText"
        android:text="@string/GUI"
        android:textSize="30dp"
        android:layout_columnSpan="2"
        />

    <Button
        android:id="@+id/clickHereButton"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:text="@string/clickHereButton" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/checkBox" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_row="2"
        android:layout_column="0"
        android:scaleType="fitXY"
        android:padding="0dp"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/sw"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/switchText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_columnSpan="2"
        android:hint="@string/typeHere"
        android:inputType="textPersonName|textCapWords" />

</GridLayout>