<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/msgHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messageHere"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/idEquals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idEquals"
        android:textSize="20dp"/>

    <CheckBox
        android:id="@+id/isSendCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/isSend"/>

    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hideButton"/>


</LinearLayout>