<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/enterEmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterEmail" />

    <!--    android:inputType="textPersonName|textCapWords"-->
    <EditText
        android:id="@+id/enterEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/typeEmail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/typePasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterPassword" />

    <EditText
        android:id="@+id/enterPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>