<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/myText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/GUI"
        android:textSize="30dp"
        />

    <Button
        android:id="@+id/clickHereButton"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/myText"
        android:layout_alignParentLeft="true"
        android:text="@string/clickHereButton" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@id/myText"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/clickHereButton"
        android:text="@string/checkBox" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/clickHereButton"
        android:layout_alignParentLeft="true"
        android:scaleType="fitXY"
        android:padding="0dp"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/sw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox"
        android:layout_alignParentRight="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="-1dp"
        android:layout_toEndOf="@id/imageButton"
        android:text="@string/switchText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:inputType="textPersonName|textCapWords"
        android:hint="@string/typeHere"
        />

</RelativeLayout>